--- a/html/details.html
+++ b/html/details.html
@@ -52,7 +52,7 @@
   <button class="back_btn" onclick="goBack()">Go Back</button>
 
   <!-- Footer content starts here -->
-  <footer class="details">
+  <footer>
     <div class="footer-container">
       <div class="footer-content">
         <h3>Contact Us</h3>
@@ -61,9 +61,12 @@
       </div>
       <div class="footer-content">
         <h3>Follow Us</h3>
-        <img class="social_icons" src="/assets/instagram.svg" alt="facebook social icon">
-        <img class="social_icons" src="/assets/youtube.svg" alt="facebook social icon">
-        <img class="social_icons" src="/assets/facebook.svg" alt="facebook social icon">
+        <a href="https://www.instagram.com/" target="_blank"><img class="social_icons" src="/assets/instagram.svg"
+            alt="Instagram social icon"></a>
+        <a href="https://www.youtube.com/" target="_blank"><img class="social_icons" src="/assets/youtube.svg"
+            alt="YouTube social icon"></a>
+        <a href="https://www.facebook.com/" target="_blank"><img class="social_icons" src="/assets/facebook.svg"
+            alt="facebook social icon"></a>
       </div>
     </div>
   </footer>
