--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   </main>
   <!-- Footer content starts here -->
-  <footer>
+  <footer class="index">
     <div class="footer-container">
       <div class="footer-content">
         <h3>Contact Us</h3>
@@ -71,9 +71,12 @@
       </div>
       <div class="footer-content">
         <h3>Follow Us</h3>
-        <img class="social_icons" src="/assets/instagram.svg" alt="facebook social icon">
-        <img class="social_icons" src="/assets/youtube.svg" alt="facebook social icon">
-        <img class="social_icons" src="/assets/facebook.svg" alt="facebook social icon">
+        <a href="https://www.instagram.com/" target="_blank"><img class="social_icons" src="/assets/instagram.svg"
+            alt="Instagram social icon"></a>
+        <a href="https://www.youtube.com/" target="_blank"><img class="social_icons" src="/assets/youtube.svg"
+            alt="YouTube social icon"></a>
+        <a href="https://www.facebook.com/" target="_blank"><img class="social_icons" src="/assets/facebook.svg"
+            alt="facebook social icon"></a>
       </div>
     </div>
   </footer>
