footer adjustments placement bottom index page and carousel placement +2em

--- a/html/about.html
+++ b/html/about.html
@@ -69,7 +69,7 @@
     </p>
 
   </main>
-  <!-- Footer content starts here -->
+  <!-- Footer content starts here! -->
   <footer>
     <div class="footer-container">
       <div class="footer-content">
