added modal to detail page

--- a/html/details.html
+++ b/html/details.html
@@ -48,7 +48,21 @@
   <div class="loader"><img src="../assets/loader.gif" alt="loading..."></div>
   <header id="header"></header>
   <button class="back_btn" onclick="goBack()">Go Back</button>
-  <main id="details"></main>
+
+  <main id="details">
+
+    <!-- screen cover and modal -->
+    <div id="cover">
+      <div id="modal-box">
+        <p id="modal-message">Click outside box to close</p>
+
+      </div>
+    </div>
+    <!-- Modal end -->
+
+  </main>
+
+
   <button class="back_btn" onclick="goBack()">Go Back</button>
 
   <!-- Footer content starts here -->
