--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </script>
   <script src="./js/header.js" defer></script>
   <script src="./js/carousel.js" defer></script>
-  <title>Famous robots</title>
+  <title>Explore the Enchanting Realm of Famous Robots: Uncover Tales of Beloved Movie Bots and Cutting-Edge Mechanical Marvels on Our Homepage!</title>
 </head>
 
 <body class="index">
