--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   </div>
   <!-- Page content starts here -->
   <div class="loader"><img src="./assets/loader.gif" alt="loading..."></div>
+  
   <header id="header"></header>
 
   <main id="main">
@@ -77,6 +78,9 @@
         <a href="https://www.facebook.com/" target="_blank"><img class="social_icons" src="/assets/facebook.svg"
             alt="facebook social icon"></a>
       </div>
+    </div>
+    <div class="attribution">
+      <a href="https://iconscout.com/lottie-animations/opener-loading" class="text-underline font-size-sm" target="_blank">Opener Loading</a> by <a href="https://iconscout.com/contributors/rgb4media" class="text-underline font-size-sm" target="_blank">RGB4Media</a>
     </div>
   </footer>
 
