--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/carousel.css">
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/style.css">
   <!-- Hotjar Tracking Code for Project-exam-23 -->
   <script>
     (function (h, o, t, j, a, r) {
@@ -24,8 +24,8 @@
       a.appendChild(r);
     })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
   </script>
-  <script src="./js/header.js" defer></script>
-  <script src="./js/carousel.js" defer></script>
+  <script src="./js/carousel.js" defer/></script>
+  <script src="./js/header.js" defer/></script>
   <title>Discover Famous Robots: Tales and Marvels</title>
 </head>
 
