html js file link review

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       a.appendChild(r);
     })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
   </script>
-  <script src="./js/carousel.js" defer/></script>
-  <script src="./js/header.js" defer/></script>
+  <script src="./js/carousel.js" defer></script>
+  <script src="./js/header.js" defer></script>
   <title>Discover Famous Robots: Tales and Marvels</title>
 </head>
 
@@ -46,7 +46,7 @@
   </div>
   <!-- Page content starts here -->
   <div class="loader"><img src="./assets/loader.gif" alt="loading..."></div>
-  
+
   <header id="header"></header>
 
   <main id="main">
@@ -80,7 +80,9 @@
       </div>
     </div>
     <div class="attribution">
-      <a href="https://iconscout.com/lottie-animations/opener-loading" class="text-underline font-size-sm" target="_blank">Opener Loading</a> by <a href="https://iconscout.com/contributors/rgb4media" class="text-underline font-size-sm" target="_blank">RGB4Media</a>
+      <a href="https://iconscout.com/lottie-animations/opener-loading" class="text-underline font-size-sm"
+        target="_blank">Opener Loading</a> by <a href="https://iconscout.com/contributors/rgb4media"
+        class="text-underline font-size-sm" target="_blank">RGB4Media</a>
     </div>
   </footer>
 
